--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=qrcode-generator
 
 # S3 Configurations
-aws.region=us-east-2
-aws.s3.bucket-name=your-s3-bucket-name
+aws.region=${AWS_REGION}
+aws.bucket.name=${AWS_BUCKET_NAME}
 
